--- a/layout/health-layout.liquid
+++ b/layout/health-layout.liquid
@@ -24,6 +24,11 @@
       {{ content_for_layout }}
     </main>
 
+    <div style="height: 100vh">test 1</div>
+    <div style="height: 100vh">test 2</div>
+    <div style="height: 100vh">test 3</div>
+    <div style="height: 100vh">test 4</div>
+
     {% sections 'footer-group' %}
   </body>
 </html>
