--- a/layout/health-layout.liquid
+++ b/layout/health-layout.liquid
@@ -6,6 +6,7 @@
 
     {{ content_for_header }}
     {{ 'base-health.css' | asset_url | stylesheet_tag }}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
 
     {% style %}
       {{ settings.type_body_font | font_face: font_display: 'swap' }}
@@ -30,5 +31,6 @@
     <div style="height: 100vh">test 4</div>
 
     {% sections 'footer-group' %}
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
   </body>
 </html>
