--- a/sections/health-hero.liquid
+++ b/sections/health-hero.liquid
@@ -1,172 +1,134 @@
 {{ 'swiper-bundle.min.css' | asset_url | stylesheet_tag }}
 {{ 'swiper-bundle.min.js' | asset_url | script_tag }}
 
-{% assign margin_top = 80 %}
+{% assign margin_top = 20 %}
 {% assign margin_bottom = 20 %}
 
 <style>
   .hero {
-    height: 900px;
     margin-top: {{ margin_top }}px;
     margin-bottom: {{ margin_bottom }}px;
     background: url('{{ 'health-hero-bg.png' | asset_url }}') no-repeat;
+    background-size: auto 25%;
 
-    @media (max-width: 1366px) {
-      height: 600px;
-      background-size: 100% 70%;
-    }
-    @media (max-width: 768px) {
-      height: 900px;
+    @media (min-width: 768px) {
       background-size: auto 50%;
     }
-    @media (max-width: 428px) {
-      height: 800px;
-      background-size: auto 25%;
+    @media (min-width: 1366px) {
+      background-size: 100% 70%;
     }
   }
 
-  .swiper-container {
-      width: 100%;
-      margin: 0 auto;
-      {% comment %} padding: 50px 5px; {% endcomment %}
-  }
-
-  .swiper-pagination {
-      position: relative !important;
-      margin-top: 20px;
-  }
-
-  {% comment %} .testimonial-box {
-    width: 400px;
-    padding: 17px 25px;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    gap: 20px;
-  } {% endcomment %}
-
-  .testimonial-text .heading-inner {
-    font-size: 25px;
-  }
-
-  .testimonial-main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-  }
-
-  .testimonial-box img {
-    width: 100px;
-    height: 100px;
-  }
-
-  .testimonial-text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-  }
-
-  .swiper-slide {
-    margin: 10px;
-  }
-
-  .testimonial-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: auto;
-    gap: 20px;
-    padding: 30px 40px;
-    margin: auto;
-    overflow:hidden;
-    flex-direction: column;
-  }
-
-  @media only screen and (max-width: 768px) {
-    {% comment %} .testimonial-box {
-      width: 100% !important;
-    } {% endcomment %}
-
-    .testimonial-main {
-      flex-direction: column;
-    }
-  }
-
-  .swiper-wrapper {
-    width: 100%;
+  .swiper-hero {
     overflow: hidden;
-  }
 
-  .swiper-container {
-    width: 100%;
-  }
+    & .swiper-slide {
+      & img {
+        height: 500px;
+        margin: 0 auto;
+        object-fit: scale-down;
+        transform: scale(1.5);
 
-  .swiper-slide {
-    margin: 10px;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-  }
+        @media (min-width: 428px) {
+          transform: scale(1);
+        }
+        @media (min-width: 768px) {
+          height: 700px;
+        }
+        @media (min-width: 1366px) {
+          height: 860px;
+        }
+      }
 
-  @media screen and (max-width: 768px) {
-    .swiper-container {
-      width: 100%;
+      & .slide-content {
+        margin-top: 40px;
+        padding: 0 22px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        @media (min-width: 768px) {
+          padding: 0 62px;
+        }
+
+        @media (min-width: 1366px) {
+          position: absolute;
+          bottom: 25%;
+          width: 100%;
+          padding: 0 255px;
+        }
+
+        & .buy-now-controls-wrapper {
+          display: flex;
+
+          @media (min-width: 1366px) {
+            justify-content: space-between;
+          }
+        }
+
+        & .arrows-nav {
+          position: static;
+          display: inline-flex;
+          flex-direction: row-reverse;
+          gap: 20px;
+          align-self: flex-end;
+
+          & .swiper-button-prev,
+          & .swiper-button-next {
+            position: relative;
+            right: 0;
+            width: 20px;
+            height: 20px;
+            padding: 30px;
+            border-radius: 50%;
+            outline: 1px solid var(--color-border);
+            outline-offset: -5px;
+            &:after {
+              content: '';
+            }
+          }
+          & .swiper-button-prev {
+            background: url('{{ 'health-arrow-left.svg' | asset_url }}') no-repeat center;
+          }
+          & .swiper-button-next {
+            background: url('{{ 'health-arrow-right.svg' | asset_url }}') no-repeat center;
+          }
+        }
+
+        & p {
+          color: var(--color-grey-text);
+        }
+
+        & .buy-now {
+          width: 100%;
+
+          @media (min-width: 1366px) {
+            max-width: 320px;
+          }
+        }
+      }
     }
+  }
 
-    .swiper-slide {
-      width: 100% !important;
-    }
+  .autoplay-progress {
+    --progress: 0;
+    position: absolute;
+    inset: 0;
+    z-index: 10;
+    stroke-width: 2px;
+    stroke: var(--color-accent-blue);
+    fill: none;
+    stroke-dashoffset: calc(125.6px * (1 - var(--progress)));
+    stroke-dasharray: 125.6;
+    transform: rotate(-90deg);
   }
 </style>
 
-{% comment %}
-  remove classes:
-{% endcomment %}
-
-<div class="hero-wrapper">
-  <h1>THE HEALTH PROJECT</h1>
-
-  <div class="testimonial-container">
-    <div class="swiper-container">
-      <div class="swiper-wrapper">
-        {% for block in section.blocks %}
-          <div class="swiper-slide">
-            {% comment %} <div class="testimonial-box"> {% endcomment %}
-            <img src="{{ block.settings.image | image_url: width: 300 }}" width="300" height="300">
-            <div class="testimonial-text">
-              <h1
-                class="heading-inner"
-                style="font-weight: {{ block.settings.slide-font-weight }}; font-size: {{ block.settings.slide-heading-font-size }}px"
-              >
-                {{ block.settings['slide-text'] }}
-              </h1>
-              <p style="font-size: {{ block.settings.desc-size }}px;">
-                {{ block.settings.desc }}
-              </p>
-              {% comment %} </div> {% endcomment %}
-            </div>
-          </div>
-        {% endfor %}
-      </div>
-
-      <div class="arrows-nav">
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-      </div>
-      <div class="swiper-pagination"></div>
-    </div>
-  </div>
-</div>
-
-{% comment %}
-  remove from settings id:
-{% endcomment %}
-
 {% javascript %}
-  new Swiper('.swiper-container', {
+  const progressCircle = document.querySelectorAll('.autoplay-progress');
+  const delay = parseInt(document.querySelector('.swiper-hero').dataset.slideSpeed) * 1000;
+
+  new Swiper('.swiper-hero', {
     direction: 'horizontal',
     loop: true,
     slidesPerView: 1,
@@ -174,15 +136,47 @@
       nextEl: '.swiper-button-next',
       prevEl: '.swiper-button-prev',
     },
-    pagination: {
-      el: '.swiper-pagination',
-      clickable: true,
-    },
-    autoplay: {
-      delay: 2000,
+    autoplay: { delay },
+    on: {
+      autoplayTimeLeft(s, time, progress) {
+        progressCircle.forEach((el) => el.style.setProperty('--progress', 1 - progress));
+      },
     },
   });
 {% endjavascript %}
+
+<div class="swiper-hero" data-slide-speed="{{ section.settings.autoplay_delay }}">
+  <div class="swiper-wrapper">
+    {% for block in section.blocks %}
+      <div class="swiper-slide">
+        <img src="{{ block.settings.image | image_url }}" width="1100" height="861">
+        <div class="slide-content">
+          <h1
+            style="
+              font-weight: {{ block.settings.slide-font-weight }};
+              font-size: {{ block.settings.slide-heading-font-size }}px
+            "
+          >
+            {{ block.settings['slide-text'] }}
+          </h1>
+          <p style="font-size: {{ block.settings.desc-size }}px;">{{ block.settings.desc }}</p>
+
+          <div class="buy-now-controls-wrapper">
+            <button class="button-primary buy-now">Buy now</button>
+            <div class="arrows-nav">
+              <div class="swiper-button-next">
+                <svg class="autoplay-progress" viewBox="0 0 48 48">
+                  <circle cx="24" cy="24" r="20"></circle>
+                </svg>
+              </div>
+              <div class="swiper-button-prev"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    {% endfor %}
+  </div>
+</div>
 
 {% schema %}
 {
@@ -194,6 +188,14 @@
       "type": "image_picker",
       "id": "background_image",
       "label": "Hero image"
+    },
+    {
+      "type": "range",
+      "id": "autoplay_delay",
+      "label": "Autoplay delay",
+      "min": 1,
+      "max": 60,
+      "default": 20
     }
   ],
   "blocks": [
