--- a/layout/health-layout.liquid
+++ b/layout/health-layout.liquid
@@ -6,9 +6,17 @@
 
     {{ content_for_header }}
     {{ 'base-health.css' | asset_url | stylesheet_tag }}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+
+    {%- liquid
+      assign body_font_400 = settings.type_body_font | font_modify: 'weight', '400'
+      assign body_font_500 = settings.type_body_font | font_modify: 'weight', '500'
+      assign body_font_600 = settings.type_body_font | font_modify: 'weight', '600'
+    %}
 
     {% style %}
+      {{ body_font_400 | font_face: font_display: 'swap' }}
+      {{ body_font_500 | font_face: font_display: 'swap' }}
+      {{ body_font_600 | font_face: font_display: 'swap' }}
       {{ settings.type_body_font | font_face: font_display: 'swap' }}
       {{ settings.type_header_font | font_face: font_display: 'swap' }}
         body {
@@ -31,6 +39,5 @@
     <div style="height: 100vh">test 4</div>
 
     {% sections 'footer-group' %}
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
   </body>
 </html>
