--- a/sections/health-hero.liquid
+++ b/sections/health-hero.liquid
@@ -126,7 +126,7 @@
 
 {% javascript %}
   const progressCircle = document.querySelectorAll('.autoplay-progress');
-  const delay = parseInt(document.querySelector('.swiper-hero').dataset.slideSpeed) * 1000;
+  const delay = parseInt(document.querySelector('.swiper-hero').dataset.delay) * 1000;
 
   new Swiper('.swiper-hero', {
     direction: 'horizontal',
@@ -145,7 +145,7 @@
   });
 {% endjavascript %}
 
-<div class="swiper-hero" data-slide-speed="{{ section.settings.autoplay_delay }}">
+<div class="swiper-hero" data-delay="{{ section.settings.autoplay_delay }}">
   <div class="swiper-wrapper">
     {% for block in section.blocks %}
       <div class="swiper-slide">
