fixes: health collection

--- a/sections/health-collections.liquid
+++ b/sections/health-collections.liquid
@@ -40,6 +40,10 @@
       padding: 0 22px;
       color: var(--color-grey-text);
 
+      @media (min-width: 1366px) {
+        text-align: center;
+      }
+
       &.active {
         display: block;
       }
@@ -130,7 +134,7 @@
     direction: 'horizontal',
     loop: true,
     slidesPerView: 1.2,
-    centeredSlides: true,
+    // centeredSlides: true,
     spaceBetween: 8,
     freeMode: true,
     navigation: {
@@ -179,10 +183,9 @@
 <div>
   <div class="titles-wrapper">
     {%- for collection in section.settings.collections -%}
-      {% if forloop.first %} {% continue %} {% endif %}
       <div>
         <button
-          class="collection-title {% if forloop.index0 == 1 %}active{% endif %}"
+          class="collection-title {% if forloop.first %}active{% endif %}"
           data-collection-id="{{ collection.id }}"
         >
           {{ collection.title }}
@@ -193,10 +196,8 @@
   </div>
 
   {% for collection in section.settings.collections %}
-    {% if forloop.first %} {% continue %} {% endif %}
-
     <p
-      class="description {% if forloop.index0 == 1 %}active{% endif %}"
+      class="description {% if forloop.first %}active{% endif %}"
       data-collection-id="{{ collection.id }}"
     >
       {{ collection.description | strip_html }}
@@ -204,10 +205,8 @@
   {% endfor %}
 
   {% for collection in section.settings.collections %}
-    {% if forloop.first %} {% continue %} {% endif %}
-
     <div
-      class="swiper-collection {% if forloop.index0 == 1 %}active{% endif %}"
+      class="swiper-collection {% if forloop.first %}active{% endif %}"
       data-collection-id="{{ collection.id }}"
     >
       <div class="swiper-wrapper">
