--- a/sections/health-hero.liquid
+++ b/sections/health-hero.liquid
@@ -206,7 +206,7 @@
     {
       "type": "range",
       "id": "margin_bottom",
-      "label": "Margin top",
+      "label": "Margin bottom",
       "max": 100,
       "min": 0,
       "default": 20
