test: top sellers section

--- a/layout/health-layout.liquid
+++ b/layout/health-layout.liquid
@@ -27,12 +27,10 @@
     <title>The Health Project</title>
   </head>
   <body>
-    {% sections 'header-group' %}
+    {% section 'health-header' %}
 
     <main>
       {{ content_for_layout }}
     </main>
-
-    {% sections 'footer-group' %}
   </body>
 </html>
