--- a/layout/health-layout.liquid
+++ b/layout/health-layout.liquid
@@ -6,6 +6,7 @@
 
     {{ content_for_header }}
     {{ 'base-health.css' | asset_url | stylesheet_tag }}
+    {{ 'swiper-bundle.min.css' | asset_url | stylesheet_tag }}
 
     {%- liquid
       assign body_font_400 = settings.type_body_font | font_modify: 'weight', '400'
@@ -32,5 +33,8 @@
     <main>
       {{ content_for_layout }}
     </main>
+
+    {% # theme-check-disable %}
+    {{ 'swiper-bundle.min.js' | asset_url | script_tag }}
   </body>
 </html>
