--- a/sections/health-collections.liquid
+++ b/sections/health-collections.liquid
@@ -1,6 +1,3 @@
-{{ 'swiper-bundle.min.css' | asset_url | stylesheet_tag }}
-{{ 'swiper-bundle.min.js' | asset_url | script_tag }}
-
 <style>
   .collections {
     margin-top: {{ section.settings.margin_top }}px;
@@ -35,26 +32,36 @@
     }
 
     & .description {
-      display: none;
+      visibility: hidden;
+      opacity: 0;
+      max-height: 0;
       margin-bottom: 20px;
       padding: 0 22px;
       color: var(--color-grey-text);
+      transition: all 1s ease-in-out;
 
       @media (min-width: 1366px) {
         text-align: center;
       }
 
       &.active {
-        display: block;
+        visibility: visible;
+        opacity: 1;
+        max-height: 300px;
       }
     }
 
     & .swiper-collection {
-      display: none;
+      visibility: hidden;
+      opacity: 0;
+      max-height: 0;
       overflow: hidden;
+      transition: all 1s ease-in-out;
 
       &.active {
-        display: block;
+        visibility: visible;
+        opacity: 1;
+        max-height: 700px;
       }
 
       & .swiper-controls {
