--- a/assets/health-collection.css
+++ b/assets/health-collection.css
@@ -31,10 +31,10 @@
     visibility: hidden;
     opacity: 0;
     max-height: 0;
-    margin-bottom: 20px;
+    margin-bottom: 0;
     padding: 0 22px;
     color: var(--color-grey-text);
-    transition: all .5s ease-in-out;
+    transition: all 0.5s ease-in-out;
 
     @media (min-width: 1366px) {
       text-align: center;
@@ -42,6 +42,7 @@
 
     &.active {
       visibility: visible;
+      margin-bottom: 20px;
       opacity: 1;
       max-height: 300px;
     }
@@ -52,7 +53,7 @@
     opacity: 0;
     max-height: 0;
     overflow: hidden;
-    transition: all .5s ease-in-out;
+    transition: all 0.5s ease-in-out;
 
     &.active {
       visibility: visible;
