--- a/sections/health-ultimate.liquid
+++ b/sections/health-ultimate.liquid
@@ -1,65 +1,94 @@
+{{ 'health-ultimate.css' | asset_url | stylesheet_tag }}
+
 <style>
-  .ultimate {
-    & .swiper-ultimate-products {
-      overflow: hidden;
-    }
-
-    & .swiper-slide {
-      display: flex;
-
-      & .product-info {
-        width: 50%;
-      }
-
-      & .swiper-ultimate-variants {
-        width: 50%;
-      }
-    }
+  .ultimate-{{ section.id }} {
+    margin-top: 100px; {%- comment -%} TODO: remove {%- endcomment -%}
+    margin-bottom: {{  section.settings.margin_bottom }}px;
   }
 </style>
 
 {% javascript %}
-  new Swiper('.swiper-ultimate-products', {
-    direction: 'vertical',
+  const isMobile = () => window.innerWidth < 1366;
+
+  const productsSwiper = new Swiper('.swiper-ultimate-products', {
+    direction: isMobile() ? 'horizontal' : 'vertical',
+    autoHeight: true,
+    spaceBetween: 24,
+    slidesPerView: 1,
+    nested: true,
     scrollbar: {
       el: '.swiper-ultimate-scrollbar',
     },
+    navigation: {
+      prevEl: '.swiper-ultimate-prev',
+      nextEl: '.swiper-ultimate-next',
+    },
+    on: {
+      resize: () => {
+        productsSwiper.changeDirection(isMobile() ? 'horizontal' : 'vertical');
+      },
+    },
   });
 
-  new Swiper('.swiper-ultimate-variants', {
+  const variantsSwiper = new Swiper('.swiper-ultimate-variants', {
     direction: 'horizontal',
+    spaceBetween: 14,
+    slidesPerView: 1,
+    pagination: {
+      el: '.swiper-ultimate-variants-pagination',
+      clickable: true,
+      renderBullet: function (index, className) {
+        const variantColor = this.slides[index].dataset.variantColor;
+        return `<span class="${className}" style="background-color: ${variantColor}"></span>`;
+      },
+    },
+    on: {
+      touchStart: () => {
+        productsSwiper.allowTouchMove = false;
+      },
+      touchEnd: () => {
+        productsSwiper.allowTouchMove = true;
+      },
+    },
   });
-
-  console.log('asd');
 {% endjavascript %}
 
-<h1>test</h1>
-<div class="swiper-ultimate-products">
-  <div class="swiper-wrapper">
-    {% for block in section.blocks %}
-      <div class="swiper-slide">
-        <div class="product-info">
-          <h2>{{ block.settings.product.title }}</h2>
-          <p>{{ block.settings.product.description }}</p>
-        </div>
-        <div class="swiper-ultimate-variants">
-          <div class="swiper-wrapper">
-            {% for variant in block.settings.product.variants %}
-              <div class="swiper-slide">
-                <img
-                  src="{{ variant.image | image_url }}"
-                  alt="product image"
-                  width="100px"
-                  height="200px"
-                >
-              </div>
-            {% endfor %}
+<div class="ultimate-{{ section.id }} ultimate-wrapper">
+  <div class="swiper-ultimate-products">
+    <div class="swiper-wrapper">
+      {% for block in section.blocks %}
+        <div class="swiper-slide">
+          <div class="product-info">
+            <h2>{{ block.settings.product.title }}</h2>
+            <p>{{ block.settings.product.description }}</p>
           </div>
+
+          {% if block.settings.product.variants.size > 1 %}
+            <div class="swiper-ultimate-variants">
+              <div class="swiper-wrapper">
+                {% for variant in block.settings.product.variants %}
+                  <div class="swiper-slide" data-variant-color="{{ variant.metafields.custom.color.value.color }}">
+                    {{ variant.featured_media | image_url: width: 500, height: 500 | image_tag }}
+                  </div>
+                {% endfor %}
+              </div>
+              <div class="swiper-ultimate-variants-pagination"></div>
+            </div>
+          {% else %}
+            <div class="product-image-wrapper">
+              {{ block.settings.product | image_url: width: 500, height: 500 | image_tag }}
+            </div>
+          {% endif %}
         </div>
-      </div>
-    {% endfor %}
+      {% endfor %}
+    </div>
   </div>
-  <div class="swiper-pagination"></div>
+
+  <div class="swiper-ultimate-controls">
+    <div class="swiper-ultimate-prev"></div>
+    <div class="swiper-ultimate-scrollbar"></div>
+    <div class="swiper-ultimate-next"></div>
+  </div>
 </div>
 
 {% schema %}
