--- a/assets/health-ultimate.css
+++ b/assets/health-ultimate.css
@@ -1,149 +1,179 @@
-.ultimate-wrapper {
+.ultimate {
+  padding-inline: 25px;
+
   @media (min-width: 1366px) {
-    height: 600px;
-    padding: 0 62px;
-    display: flex;
-    align-items: center;
-    gap: 70px;
+    padding-inline: 62px;
   }
 
-  @media (min-width: 1920px) {
-    padding: 0 255px;
+  & .swiper-ultimate-products {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    overflow: hidden;
+
+    @media (min-width: 1366px) {
+      max-width: 1350px;
+      margin: auto;
+      height: 600px;
+      align-items: center;
+      flex-direction: row-reverse;
+    }
+
+    & .swiper-slide {
+      display: flex;
+      align-items: center;
+    }
+
+    & .slide-content {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(3, auto);
+      gap: 15px;
+
+      & .title {
+        height: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: 500;
+        font-size: 32px;
+
+        @media (min-width: 1366px) {
+          justify-content: left;
+        }
+      }
+
+      & .product-media {
+        width: 100%;
+        height: 100%;
+        align-content: center;
+        background-color: #f8f8f8;
+        overflow: hidden;
+
+        & img {
+          max-height: 450px;
+          height: auto;
+          margin: 0 auto;
+        }
+
+        & .swiper-ultimate-variants-pagination {
+          padding-bottom: 8px;
+          display: flex;
+          justify-content: center;
+
+          & .swiper-pagination-bullet {
+            width: 18px;
+            height: 18px;
+          }
+        }
+      }
+
+      & .description {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        color: var(--color-grey-text);
+
+        & .weight {
+          font-size: 18px;
+          font-weight: 500;
+        }
+
+        & ul {
+          padding-left: 24px;
+
+          & li::marker {
+            color: var(--color-accent-blue);
+            font-size: 24px;
+          }
+        }
+
+        & button {
+          width: 100%;
+
+          @media (min-width: 1366px) {
+            max-width: 180px;
+          }
+        }
+      }
+
+      @media (min-width: 1366px) {
+        grid-template-columns: repeat(2, 600px);
+        grid-template-rows: 100px 500px;
+        grid-template-areas:
+          'title product-media'
+          'description product-media';
+        align-items: center;
+        gap: 0 50px;
+
+        .title {
+          grid-area: title;
+        }
+        .description {
+          grid-area: description;
+        }
+        .product-media {
+          grid-area: product-media;
+        }
+      }
+    }
   }
 
   & .swiper-ultimate-controls {
-    position: static;
-    width: 100%;
-    padding: 0 22px;
-    display: inline-flex;
-    flex-direction: row;
+    height: 52px;
+    display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
 
     @media (min-width: 1366px) {
-      height: 80%;
-      width: 4px;
+      width: 50px;
+      height: 100%;
       flex-direction: column;
-      order: -1;
     }
+  }
 
-    & .swiper-ultimate-scrollbar {
-      width: 100%;
-      height: 5px;
-      background-color: #f8f8f8;
+  & .swiper-ultimate-scrollbar {
+    width: 100%;
+    height: 5px;
+    background-color: #f8f8f8;
 
-      @media (min-width: 1366px) {
-        width: 4px;
-        height: 100%;
-      }
+    @media (min-width: 1366px) {
+      width: 5px;
+      height: 100%;
     }
 
     & .swiper-scrollbar-drag {
       background-color: var(--color-accent-blue);
     }
+  }
 
-    & .swiper-ultimate-prev,
-    & .swiper-ultimate-next {
-      position: relative;
-      right: 0;
-      width: 20px;
-      height: 20px;
-      padding: 30px;
-      border-radius: 50%;
-      outline: 1px solid var(--color-border);
-      outline-offset: -5px;
-      cursor: pointer;
-      &:after {
-        content: '';
-      }
-    }
-    & .swiper-ultimate-prev {
-      background: url('health-arrow-left.svg') no-repeat center;
-    }
-    & .swiper-ultimate-next {
-      background: url('health-arrow-right.svg') no-repeat center;
+  & .swiper-ultimate-prev,
+  .swiper-ultimate-next {
+    position: relative;
+    right: 0;
+    width: 20px;
+    height: 20px;
+    padding: 30px;
+    border-radius: 50%;
+    outline: 1px solid var(--color-border);
+    outline-offset: -5px;
+    cursor: pointer;
+    &:after {
+      content: '';
     }
   }
-}
-
-.ultimate {
-  & .swiper-ultimate-products {
-    padding: 0 22px;
-    overflow: hidden;
+  & .swiper-ultimate-prev {
+    background: url('health-arrow-left.svg') no-repeat center;
 
     @media (min-width: 1366px) {
-      padding: 0;
-    }
-
-    & .swiper-slide {
-      height: 100% !important;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-
-      @media (min-width: 1366px) {
-        flex-direction: row;
-        justify-content: left;
-      }
+      transform: rotate(90deg);
     }
   }
-
-  & .product-info {
-    @media (min-width: 1366px) {
-      max-width: 50%;
-    }
-  }
-
-  & .product-image-wrapper {
-    width: 100%;
-    background-color: #f8f8f8;
-
-    & img {
-      height: auto;
-      margin: 0 auto;
-
-      border-radius: 12px;
-    }
-  }
-
-  & .swiper-ultimate-variants {
-    padding-bottom: 25px;
+  & .swiper-ultimate-next {
+    background: url('health-arrow-right.svg') no-repeat center;
 
     @media (min-width: 1366px) {
-      overflow: hidden;
-    }
-
-    & .swiper-slide {
-      background-color: #f8f8f8;
-
-      & img {
-        margin: 0 auto;
-        height: 100%;
-        border-radius: 12px;
-
-        @media (min-width: 1366px) {
-          height: 90%;
-        }
-      }
-    }
-
-    & .swiper-ultimate-variants-pagination {
-      margin: 0 auto;
-      min-height: 24px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      @media (min-width: 1366px) {
-        position: relative;
-        bottom: 30px;
-        z-index: 100;
-      }
-    }
-
-    & .swiper-pagination-bullet {
-      width: 20px;
-      height: 20px;
+      transform: rotate(90deg);
     }
   }
 }
