--- a/assets/health-hero.css
+++ b/assets/health-hero.css
@@ -95,6 +95,10 @@
       @media (min-width: 1366px) {
         max-width: 320px;
       }
+
+      @media (min-width: 1920px) {
+        max-width: 180px;
+      }
     }
   }
 
