--- a/assets/health-top-sellers.css
+++ b/assets/health-top-sellers.css
@@ -6,6 +6,10 @@
     font-weight: 500;
     margin-bottom: 10px;
     text-align: center;
+
+    @media (max-width: 768px) {
+      font-size: 100px;
+    }
   }
 
   & .section-description {
