--- a/assets/health-faq.css
+++ b/assets/health-faq.css
@@ -36,7 +36,24 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 20px;
     cursor: pointer;
+
+    & .dots {
+      display: none;
+
+      @media (min-width: 768px) {
+        display: block;
+      }
+    }
+
+    & .numbering {
+      display: none;
+
+      @media (min-width: 1366px) {
+        display: block;
+      }
+    }
 
     & button {
       border: none;
